# famrdp-jax

./: .gitignore  CMakeLists.txt  README.md  build_probe.sh  gen_refs.f90  param.inp  pyproject.toml  test3.gg  test3.grd  test3.grd.dst  test3.inp
benchmarks/: bench_step.py
docs/: design-comparison-3d-vs-1d.md  plan-phase0-phase1-cross-validation.md  requirements.md  roadmap-1d-jax-solver.md
docs/original/: functional-description.md  user-manual.md
docs/superpowers/plans/: 2026-04-17-famrdp-jax-stage1-muscl-roe.md
docs/superpowers/specs/: 2026-04-17-famrdp-jax-differentiable-design.md
euler1d_jax/: __init__.py  export_tecplot.py  main.py  param.json  smoke_test.py  visualize.py
euler1d_jax/bc/: ghost.py
euler1d_jax/mesh/: domain.py  metrics.py
euler1d_jax/results/: residual_1d_euler.csv  sol_1d_euler.npz
euler1d_jax/scheme/: muscl2.py  precomp.py  roe.py
euler1d_jax/solver/: rhs.py  rk3.py
euler1d_jax/tests/: test_vs_fortran.py
famrdp_jax/: __init__.py
famrdp_jax/core/: config_io.py  constants.py  dtypes.py  types.py
famrdp_jax/flux/: roe.py
famrdp_jax/mesh/: build_state.py  halo.py  io_grd.py  io_top.py  metric.py
famrdp_jax/physics/: eos.py
famrdp_jax/physics/bc/: base.py  dispatch.py  farfield.py  symmetry.py  wall.py
famrdp_jax/physics/reconstruct/: muscl2.py
famrdp_jax/rhs/: invscd.py  viscous.py
famrdp_jax/solver/: step.py
famrdp_jax/time/: rk.py
src/: CMakeLists.txt  bc.f90  communicate.f90  eos.f90  initialize.f90  io_input.f90  io_output.f90  main.f90  metric.f90  misc.f90  mod_constants.f90  mod_datatypes.f90  mod_fieldvars.f90  mod_interface.f90  mod_kndconsts.f90  mod_kndconsts.mod  mod_opt_vars.f90  mod_parallels.f90  mod_runtimers.f90  mod_singulars.f90  mod_tecplotio.f90  mod_variables.f90  preset.f90  rhs_invscd.f90  rhs_source.f90  rhs_viscous.f90  rhside.f90  sol_lusgs.f90  sol_lusgs_prec.f90  sol_lusgs_scmp.f90  sol_prmat.f90  sol_prsca.f90  sol_prsca_scmp.f90  sol_rkutta.f90  solve.f90  tur_bc.f90  tur_lusgs.f90  tur_menter.f90  tur_spalart.f90  turbulent.f90  (+3 more)
tests/: conftest.py
tests/core/: test_config_io.py  test_constants.py  test_dtypes.py  test_types.py
tests/fixtures/: gen_mini_grd.py  mini.grd  mini.inp  minimal.inp
tests/flux/: test_roe.py
tests/mesh/: test_build_state.py  test_halo.py  test_io_grd.py  test_io_top.py  test_metric.py
tests/physics/: test_bc_dispatch.py  test_bc_farfield.py  test_bc_slip_symmetry.py  test_bc_wall.py  test_eos.py  test_muscl2.py
tests/rhs/: test_invscd.py  test_viscous.py
tests/solver/: test_grad.py  test_step.py
tests/time/: test_rk.py
tests/validation/: test_m10_grid_match.py  test_m11_metric_match.py  test_m17_ten_steps.py
validation/: diff.py  fortran_ref.py
validation/fortran_probes/: README.md  probe_utils.f90  probes.h
validation/references/test3/xyz/: README.md
