FILE(GLOB_RECURSE SRCS ${CMAKE_CURRENT_SOURCE_DIR}/*.f90)

ADD_EXECUTABLE(${target_name} ${SRCS})

TARGET_COMPILE_DEFINITIONS(${target_name} PRIVATE ${OMP_FLAG})
TARGET_COMPILE_DEFINITIONS(${target_name} PRIVATE ${MPI_FLAG})
#TARGET_COMPILE_DEFINITIONS(${target_name} PRIVATE ${SET_OPT_FLAGS1})
#TARGET_COMPILE_DEFINITIONS(${target_name} PRIVATE ${SET_OPT_FLAGS2})
#TARGET_COMPILE_DEFINITIONS(${target_name} PRIVATE ${SET_OPT_FLAGS3})
#TARGET_COMPILE_DEFINITIONS(${target_name} PRIVATE ${SET_OPT_FLAGS4})

IF (WIN32)
    TARGET_LINK_LIBRARIES(${target_name} PRIVATE ${MPI_PATH}/lib/${mpilib})
ELSE()
    TARGET_COMPILE_OPTIONS(${target_name} PRIVATE -cpp)
ENDIF ()